--- a/app/components/fullCalendar.css
+++ b/app/components/fullCalendar.css
@@ -114,3 +114,11 @@
 	border-radius: 5px;
 	margin-right: 0.5rem;
 }
+
+.list-letter{
+
+	width: 100%;
+	display: flex;
+	overflow: hidden;
+	flex-wrap: wrap;
+}
